--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		const app = new App({prop_greeting: "Hi CORONA", prop_ping: "pong"});
 		app.render(document.getElementById("app"));
 	</script>
-
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 <div id="app"></div>
