--- a/Button.html
+++ b/Button.html
@@ -1,6 +1,11 @@
 <label :for="prop_id">
 	{{prop_label}}
 </label>
-<button :id="prop_id" @click="button_click">
+<button :id="prop_id" @click="button_click" class="btn btn-primary btn-lg" style="
+  border: none;
+    outline: none;
+    background: linear-gradient(45deg, #F06292, #673003);
+    box-shadow: 11px 5px 10px 0 #00000069;
+    border-radius: 10px 0 10px 10px;">
 	{{prop_caption}}
 </button>
